# Synapse

./: .gitignore  404.html  LICENSE  README.md  README.zh-TW.md  index.html  llm_node_schema.json  main.py  mkdocs.yml  output_ch1.tif  output_ch2.tif  output_ch3.tif  output_ch4.tif  pyproject.toml  requirements.txt  shortcuts.html  sitemap.xml
.github/workflows/: build-nuitka.yml  build-rust-wheels.yml  build.yml
NodeGraph-PySide6/: README.md  setup.cfg
NodeGraph-PySide6/NodeGraphQt/: constants.py
NodeGraph-PySide6/NodeGraphQt/base/: commands.py  factory.py  graph.py  menu.py
NodeGraph-PySide6/NodeGraphQt/custom_widgets/: nodes_palette.py  nodes_tree.py
NodeGraph-PySide6/NodeGraphQt/custom_widgets/properties_bin/: custom_widget_color_picker.py  custom_widget_file_paths.py  custom_widget_value_edit.py  node_property_widgets.py  prop_widgets_abstract.py  prop_widgets_base.py
NodeGraph-PySide6/NodeGraphQt/nodes/: base_node.py
NodeGraph-PySide6/NodeGraphQt/qgraphics/: node_abstract.py  node_backdrop.py  node_base.py  node_circle.py  node_group.py  pipe.py  port.py
NodeGraph-PySide6/NodeGraphQt/widgets/: actions.py  node_widgets.py  scene.py  tab_search.py  viewer.py  viewer_nav.py
concepts/: batch-processing.html  data-types.html  nodes-and-connections.html
developing/: creating-plugins.html
docs/: index.md  shortcuts.md
docs/concepts/: batch-processing.md  data-types.md  nodes-and-connections.md
docs/developing/: creating-plugins.md
docs/getting-started/: ai-assistant.md  examples.md  installation.md  interface.md  plugins.md  quick-start.md
docs/nodes/: io-display.md
docs/nodes/data-tables/: combine.md  compute.md  filter.md  transform.md  util.md
docs/overrides/: main.html
docs/plugins/: cellpose.md  cheminformatics.md  figure-plotting.md  filopodia.md  report.md  sam2.md  video-tracking.md  volume.md
docs/plugins/image-analysis/: color.md  exposure.md  filters.md  measurement.md  morphology.md  roi-drawing.md  transform.md
docs/plugins/statistical-analysis/: descriptive.md  regression.md
docs/superpowers/specs/: 2026-04-14-ai-chat-interactive-design.md
docs/workflows/: batch-analysis.md  cell-counting.md
getting-started/: ai-assistant.html  examples.html  installation.html  interface.html  plugins.html  quick-start.html
image_process_3d_rs/: Cargo.toml  pyproject.toml
image_process_3d_rs/src/: lib.rs
image_process_rs/: Cargo.toml  pyproject.toml
image_process_rs/src/: lib.rs
ims_reader_rs/: Cargo.toml  pyproject.toml
ims_reader_rs/src/: fast_read.rs  lib.rs
nodes/: io-display.html
nodes/data-tables/: combine.html  compute.html  filter.html  transform.html  util.html
oir_reader_rs/: Cargo.toml  pyproject.toml
oir_reader_rs/src/: lib.rs
plans/: 2026-04-14-ai-chat-phase-1-plumbing.md  2026-04-14-ai-chat-phase-2a-tool-infrastructure.md  2026-04-14-ai-chat-phase-2b-orchestrator-and-clients.md  2026-04-17-ai-chat-phase-3-ui-polish.md
plugins/: cellpose.html  cheminformatics.html  figure-plotting.html  filopodia.html  sam2.html  video-tracking.html  volume.html
plugins/image-analysis/: color.html  exposure.html  filters.html  measurement.html  morphology.html  roi-drawing.html  transform.html
plugins/statistical-analysis/: descriptive.html  regression.html
synapse/: __init__.py  __main__.py  app.py  compact_workflow.py  custom_nodes.py  data_models.py  export_node_schema.py  export_script.py  generate_docs.py  i18n.py  llm_assistant.py  llm_node_schema.json  markdown_render.py  minimap.py  plugin_imports.py  plugin_loader.py  skimage_nuitka_compat.py
synapse/ai/: __init__.py  bubble_state.py  chat_worker.py  context.py  feature_flags.py  orchestrator.py  prompts.py  schema.py  token_estimate.py  tools.py
synapse/ai/clients/: __init__.py  _fallback_parser.py  base.py  claude.py  gemini.py  groq.py  llamacpp.py  ollama.py  openai.py  openrouter.py  runpod.py  tool_adapters.py
synapse/ai/tool_handlers/: explain_node.py  generate_workflow.py  inspect_canvas.py  modify_workflow.py  read_node_output.py  write_python_script.py
synapse/docs/nodes/: io-display.md
synapse/icons/: app_icon_v1.svg.txt
synapse/nodes/: __init__.py  base.py  dataframe_nodes.py  display_nodes.py  io_nodes.py  utility_nodes.py
synapse/plugins/: __init__.py  filopodia_nodes.py
synapse/plugins/figure_plotting/: plot_nodes.py
synapse/plugins/image_analysis/: image_process_nodes.py  mask_nodes.py  roi_nodes.py  vision_nodes.py
synapse/plugins/statistical_analysis/: analysis_nodes.py  stats_nodes.py
synapse/site/: 404.html  index.html  shortcuts.html  sitemap.xml
synapse/site/concepts/: data-types.html  nodes-and-connections.html
synapse/site/nodes/: io-display.html
synapse/translations/: zh_TW.py
synapse/ui/: svg_editor_window.py  svg_graphics_items.py
tests/: test_markdown_render.py
tests/ai/: fakes.py  test_base.py  test_bubble_state.py  test_chat_worker.py  test_claude_stream.py  test_context.py  test_dispatcher_wiring.py  test_fakes.py  test_fallback_parser.py  test_gemini_stream.py  test_groq_stream.py  test_handler_explain_node.py  test_handler_generate_workflow.py  test_handler_inspect_canvas.py  test_handler_modify_workflow.py  test_handler_read_node_output.py  test_handler_write_python_script.py  test_ollama_stream.py  test_openai_stream.py  test_openrouter_stream.py  test_orchestrator.py  test_phase1_integration.py  test_phase2b_integration.py  test_prompts.py  test_token_estimate.py  test_tool_adapters.py  test_tool_dispatcher.py  test_tools_schema.py
workflows/: OIR_convert.json  batch-analysis.html  cell-counting.html  sample_cell.tif
(+31 files in other folders)
