[metadata]
name = NodeGraphQt
version=attr: NodeGraphQt.pkg_info.__version__
author=Johnny Chan/ Yukun Guo
license = MIT License
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown
description = Node graph framework for PySide6 that can be
              implemented and re-purposed into applications.
classifiers = Operating System :: OS Independent
              License :: OSI Approved :: MIT License
              Programming Language :: Python :: 3.6
url = https://github.com/Yukun-Guo/NodeGraph-PySide6
project_urls = 
    Documentation = https://jchanvfx.github.io/NodeGraphQt/api/index.html
    Source = https://github.com/Yukun-Guo/NodeGraph-PySide6/
    Tracker = https://github.com/Yukun-Guo/NodeGraph-PySide6/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    Qt.py>=1.2.0

[options.extras_require]
PySide6 = PySide6>=6.0.0

[options.packages.find]
exclude = examples

[options.package_data]
NodeGraphQt = widgets/icons/node_base.png
